crates/eml_cli/tests/snapshots/ui__run_fail@basics__unused_division_by_zero.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- runtime error ---\\n{error}\\n\")"
input_file: tests/ui/run-fail/basics/unused_division_by_zero.em
---
--- stdout ---
--- runtime error ---
division by zero in `main`
